# tree-sitter-issue-demo

./: .gitattributes  Cargo.toml
parser/: Cargo.toml  binding.gyp  grammar.js  package.json
parser/bindings/node/: binding.cc  index.js
parser/bindings/rust/: lib.rs
parser/examples/: foo
parser/src/: grammar.json  node-types.json  parser.c
src/: main.rs
